Address 3rd issue in PR#43990. Different implementation but same method as suggested.